workloads/hello-nokia-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-nokia
  name: hello-nokia-deployment
  namespace: hello-nokia
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-nokia
  template:
    metadata:
      labels:
        app: hello-nokia
    spec:
      containers:
      - image: nginx
        name: hello-nokia
        volumeMounts:
        - name: hello-nokia-static-volume
          mountPath: /usr/share/nginx/html
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
      volumes:
        - name: hello-nokia-static-volume
          configMap:
            name: hello-nokia-configmap
