workloads/hello-nokia-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-nokia-svc
  namespace: hello-nokia
  labels:
    app: hello-nokia
spec:
  type: LoadBalancer
  selector:
    app: hello-nokia
  ports:
  - name: http
    port: 80
    protocol: TCP
